<resources>
    <string name="app_name">TBB\nAdmin</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="visible">visible</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="forgot_password2">Forgot Password </string>
    <string name="create_a_new_account">Create a new account ?</string>
    <string name="price">Price:</string>
    <string name="max_price">Max Price:</string>
    <string name="home">Home</string>
    <string name="orders">Orders</string>
    <string name="product">Product</string>
    <string name="recent_product">Recent Product</string>
    <string name="recent_orders">Recent Orders</string>
    <string name="registration_form">Registration Form</string>
    <string name="name">Name</string>
    <string name="store_name">Store Name</string>
    <string name="store_location">Store Location</string>
    <string name="owner_aadhaar_number">Owner Aadhaar Number</string>
    <string name="phone_number">Phone Number</string>
    <string name="submit">Submit</string>
    <string name="send">Send</string>
    <string name="verification_msg">Your email is not verified.\nPlease click the below button and send the verification mail..! </string>
    <string name="verification_issue">Verification Issue</string>
    <string name="product_name">Product name</string>
    <string name="short_summery">Short Description in 150 Characters</string>
    <string name="prices">Price</string>
    <string name="max_prices">Max Price</string>
    <string name="description">Description in 500 Characters</string>
    <string name="quantity">Quantity</string>
    <string name="select_image">Select Image</string>
    <string name="banner">Product show in banner</string>
    <string name="brand_name">Brand Name</string>
    <string name="admin">Admin</string>
    <string name="add_category">Add Category</string>
    <string name="products">Products</string>
    <string name="payments">Payments</string>
    <string name="category">Category</string>
    <string name="category_name">Category name</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="users">Users</string>
    <string name="delete">Delete</string>
    <string name="deleteText">Are you sure wann\'t to delete ?</string>
    <string name="ok">OK</string>
    <string name="total_amount">Total Amount</string>
    <string name="payment_status">Payment status</string>
    <string name="transaction_id">Transaction Id:</string>
    <string name="order_status_update">status Update</string>
    <string name="rupees">\u20B9</string>
    <string name="discount_price">Discount price</string>
    <string name="review">Review</string>
    <string name="profile">Profile</string>
    <string name="location">Location</string>
    <string name="account_open_date">Account Creation</string>
    <string name="sent">Sent!</string>
    <string name="id_number">Id Number</string>
</resources>