<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_optimizationLevel="none"
    tools:context=".auth.ForgotActivity">

    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/logo"
        android:scaleType="centerCrop"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="20dp"
        android:contentDescription="@string/app_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imgBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_back"
        android:minWidth="48dp"
        android:minHeight="48dp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/forgot_password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/textViewForgotPage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password2"
        android:textColor="@color/black"
        android:layout_marginTop="20dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:background="@android:color/transparent"
        app:layout_constraintStart_toStartOf="@id/imgLogo"
        app:layout_constraintEnd_toEndOf="@id/imgLogo"
        app:layout_constraintTop_toBottomOf="@id/imgLogo" />

    <EditText
        android:id="@+id/eEmailAddress"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/email_address"
        android:inputType="textEmailAddress"
        android:padding="12dp"
        android:textColorHint="@color/des"
        android:textColor="@color/black"
        android:layout_marginTop="40dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:autofillHints="emailAddress"
        android:background="@drawable/edit_bg_drawable"
        app:layout_constraintTop_toBottomOf="@id/textViewForgotPage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/btnSent"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/sent"
        android:gravity="center"
        android:textColor="@color/white"
        android:background="@drawable/btn_bg_drawable"
        android:padding="10dp"
        android:layout_marginTop="20dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        app:layout_constraintTop_toBottomOf="@id/eEmailAddress"
        app:layout_constraintStart_toStartOf="@id/eEmailAddress"
        app:layout_constraintEnd_toEndOf="@id/eEmailAddress"/>

</androidx.constraintlayout.widget.ConstraintLayout>