<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="10dp">

    <TextView
        android:id="@+id/textViewDeleteDialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/delete"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:textStyle="bold"
        android:padding="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/textViewDialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/deleteText"
        android:padding="10dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewDeleteDialog"/>

    <TextView
        android:id="@+id/textViewCancelDialog"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:padding="10dp"
        android:textColor="@color/white"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="5dp"
        android:background="@drawable/btn_bg_drawable"
        android:backgroundTint="@color/red"
        app:layout_constraintStart_toStartOf="@id/textViewDeleteDialog"
        app:layout_constraintEnd_toStartOf="@id/textViewOkDialog"
        app:layout_constraintTop_toBottomOf="@id/textViewDialog"/>

    <TextView
        android:id="@+id/textViewOkDialog"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/ok"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:padding="10dp"
        android:gravity="center"
        android:textColor="@color/white"
        android:layout_marginStart="5dp"
        android:background="@drawable/btn_bg_drawable"
        app:layout_constraintStart_toEndOf="@id/textViewCancelDialog"
        app:layout_constraintEnd_toEndOf="@id/textViewDeleteDialog"
        app:layout_constraintTop_toTopOf="@id/textViewCancelDialog"
        app:layout_constraintBottom_toBottomOf="@id/textViewCancelDialog"/>

</androidx.constraintlayout.widget.ConstraintLayout>