<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="10dp"
    android:background="@drawable/category_bg_drawable">

    <TextView
        android:id="@+id/textViewAddCategory"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/add_category"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:padding="5dp"
        android:background="@android:color/transparent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <EditText
        android:id="@+id/eAddCategory"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/category_name"
        android:textColor="@color/black"
        android:layout_margin="15dp"
        android:textColorHint="@color/nightTitle"
        android:inputType="text"
        android:autofillHints="text"
        android:padding="12dp"
        android:background="@drawable/edit_bg_line_drawable"
        app:layout_constraintTop_toBottomOf="@id/textViewAddCategory"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/btnCancelCategory"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:gravity="center"
        android:padding="12dp"
        android:layout_marginEnd="5dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:background="@drawable/btn_wrong_bg_drawable"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintStart_toStartOf="@id/eAddCategory"
        app:layout_constraintEnd_toStartOf="@id/btnAddCategory"
        app:layout_constraintTop_toBottomOf="@id/eAddCategory"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <TextView
        android:id="@+id/btnAddCategory"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/add"
        android:gravity="center"
        android:padding="12dp"
        android:layout_marginStart="5dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:background="@drawable/btn_right_bg_drawable"
        app:layout_constraintStart_toEndOf="@id/btnCancelCategory"
        app:layout_constraintEnd_toEndOf="@id/eAddCategory"
        app:layout_constraintTop_toTopOf="@id/btnCancelCategory"
        app:layout_constraintBottom_toBottomOf="@id/btnCancelCategory"/>

</androidx.constraintlayout.widget.ConstraintLayout>