<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.profile.ProfileActivity">

    <TextView
        android:id="@+id/textViewPageProfile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/profile"
        android:padding="10dp"
        android:textStyle="bold"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        app:layout_constraintTop_toTopOf="parent"/>


    <TextView
        android:id="@+id/textViewName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:padding="5dp"
        android:layout_marginStart="5dp"
        app:layout_constraintHorizontal_weight="1"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintTop_toBottomOf="@id/textViewPageProfile"
        app:layout_constraintEnd_toStartOf="@id/textViewNameValue"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/textViewNameValue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="5dp"
        app:layout_constraintHorizontal_weight="1.7"
        android:maxLines="2"
        android:ellipsize="end"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintTop_toTopOf="@id/textViewName"
        app:layout_constraintStart_toEndOf="@id/textViewName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/textViewName"/>

    <TextView
        android:id="@+id/textViewEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/email_address"
        android:padding="5dp"
        app:layout_constraintHorizontal_weight="1"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintTop_toBottomOf="@id/textViewNameValue"
        app:layout_constraintEnd_toStartOf="@id/textViewEmailValue"
        app:layout_constraintStart_toStartOf="@id/textViewName"/>

    <TextView
        android:id="@+id/textViewEmailValue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:maxLines="1"
        android:ellipsize="end"
        app:layout_constraintHorizontal_weight="1.7"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintTop_toTopOf="@id/textViewEmail"
        app:layout_constraintStart_toEndOf="@id/textViewEmail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/textViewEmail"/>

    <TextView
        android:id="@+id/textViewPhone"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/phone_number"
        android:padding="5dp"
        app:layout_constraintHorizontal_weight="1"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintTop_toBottomOf="@id/textViewEmailValue"
        app:layout_constraintEnd_toStartOf="@id/textViewPhoneValue"
        app:layout_constraintStart_toStartOf="@id/textViewName"/>

    <TextView
        android:id="@+id/textViewPhoneValue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="5dp"
        app:layout_constraintHorizontal_weight="1.7"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintTop_toTopOf="@id/textViewPhone"
        app:layout_constraintStart_toEndOf="@id/textViewPhone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/textViewPhone"/>

    <TextView
        android:id="@+id/textViewLocation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/location"
        android:padding="5dp"
        app:layout_constraintHorizontal_weight="1"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintTop_toBottomOf="@id/textViewPhone"
        app:layout_constraintEnd_toStartOf="@id/textViewLocationValue"
        app:layout_constraintStart_toStartOf="@id/textViewName"/>

    <TextView
        android:id="@+id/textViewLocationValue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="5dp"
        app:layout_constraintHorizontal_weight="1.7"
        android:maxLines="5"
        android:ellipsize="end"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintTop_toTopOf="@id/textViewLocation"
        app:layout_constraintStart_toEndOf="@id/textViewLocation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/textViewLocation"/>

    <TextView
        android:id="@+id/textViewAccountCreatingDate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/account_open_date"
        android:padding="5dp"
        app:layout_constraintHorizontal_weight="1"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintTop_toBottomOf="@id/textViewLocationValue"
        app:layout_constraintEnd_toStartOf="@id/textViewAccountCreatingDateValue"
        app:layout_constraintStart_toStartOf="@id/textViewName"/>

    <TextView
        android:id="@+id/textViewAccountCreatingDateValue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="5dp"
        app:layout_constraintHorizontal_weight="1.7"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintTop_toTopOf="@id/textViewAccountCreatingDate"
        app:layout_constraintStart_toEndOf="@id/textViewAccountCreatingDate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/textViewAccountCreatingDate"/>

</androidx.constraintlayout.widget.ConstraintLayout>